tests/negative/gold/import_show_test.gold
tests/negative/import_show_test.toit:3:13: error: 'show' must be followed by '*' or identifiers
import math show
            ^~~~
Compilation failed.
